--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-app",
+	"name": "react-my-app",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -12,6 +12,7 @@
 		"@types/react-dom": "^17.0.11",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.1",
 		"react-scripts": "5.0.0",
 		"react-styleguidist": "^11.1.7",
 		"source-map-explorer": "^2.5.2",
@@ -45,6 +46,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-router-dom": "^5.3.2",
 		"sass": "^1.45.1"
 	}
 }
