--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-my-app",
+	"name": "anatomy-react-demo",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -21,9 +21,12 @@
 	},
 	"scripts": {
 		"analyze": "source-map-explorer 'build/static/js/*.js'",
-		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "react-scripts --openssl-legacy-provider build",
-		"test": "react-scripts --openssl-legacy-provider test",
+		"start": "react-scripts start",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"start:runtime": "react-scripts --openssl-legacy-provider start",
+		"build:runtime": "react-scripts --openssl-legacy-provider build",
+		"test:runtime": "react-scripts --openssl-legacy-provider test",
 		"eject": "react-scripts --openssl-legacy-provider eject",
 		"upgrade:deps": "npm-check-updates --timeout 100000 -u && yarn install"
 	},
